--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node ./lib/index.js"
+    "prepublish": "npm run build"
   },
   "author": "Mattia",
   "license": "ISC",
