--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildspace",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A tool to pipe around templates, data, and documents.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -8,7 +8,7 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js",
     "build": "tsc",
     "prepublish": "npm run build"
   },
